--- a/imad-evento-front/package.json
+++ b/imad-evento-front/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "chart.js": "2.9.3",
+    "express": "^4.18.3",
+    "html-pdf": "^3.0.1",
     "html5-qrcode": "^2.3.8",
     "next": "14.1.2",
     "react": "^18",
