--- a/imad-evento-front/package.json
+++ b/imad-evento-front/package.json
@@ -14,6 +14,7 @@
     "html-pdf": "^3.0.1",
     "html5-qrcode": "^2.3.8",
     "next": "14.1.2",
+    "nodemailer": "^6.9.12",
     "react": "^18",
     "react-dom": "^18"
   },
