--- a/imad-evento-front/package.json
+++ b/imad-evento-front/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.3",
     "html-pdf": "^3.0.1",
     "html5-qrcode": "^2.3.8",
+    "js-cookie": "^3.0.5",
     "next": "14.1.2",
     "nodemailer": "^6.9.12",
     "react": "^18",
